fix spaces on mobile

--- a/app/components/AboutSection/TextColumn/TextColumn.module.css
+++ b/app/components/AboutSection/TextColumn/TextColumn.module.css
@@ -29,3 +29,9 @@
   font-size: clamp(1.1rem, 1.4vw, 1.4rem);
   line-height: 1.4;
 }
+
+@media (max-width: 786px) {
+  .column {
+    max-width: 100%;
+  }
+}
