--- a/app/o-lumera/page.module.css
+++ b/app/o-lumera/page.module.css
@@ -36,3 +36,9 @@
   );
   z-index: 2;
 }
+
+@media (max-width: 786px) {
+  .spacer {
+    height: 12vh;
+  }
+}
